// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass active flag to active slot 1`] = `
<div>
  <Button
    active={false}
    key="0"
    name="one"
  />
  <Button2
    active={true}
    key="1"
    name="two"
  />
</div>
`;

exports[`should renderer only active slot if onlyActive=true 1`] = `
<div>
  <Button2
    active={true}
    key="1"
    name="two"
  />
</div>
`;

exports[`should renderer slots and pass props 1`] = `
<div>
  <Button
    id="Pizza"
    key="0"
  />
  <Button2
    id="Pizza"
    key="1"
  />
</div>
`;

exports[`should renderer slots in id/render format 1`] = `
<div>
  <Button
    id="Pizza"
    key="0"
    name="one"
  />
  <Button2
    id="Pizza"
    key="1"
    name="two"
  />
</div>
`;
